--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -3,6 +3,7 @@
   background-color: $nav-color;
   color: lighten($dark-color, 30%);
   padding-top: 1rem;
+  margin-top: 200px;
   p {
     font-size: 0.8rem;
     text-align: center;
