--- a/css/style.css
+++ b/css/style.css
@@ -2760,7 +2760,7 @@ h1 {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   background-color: #f4f3ee;
-  color: #978b82;
+  color: #70655d;
   padding-top: 1rem;
   margin-top: 200px;
 }
